
	* libgimpconfig/gimpconfig-utils.[ch]: changed GimpConfig utility
	functions to take GObject variables instead of GimpConfig. There's
	nothing GimpConfig specific about these utilities.

	* app/actions/templates-commands.c
	* app/actions/tool-options-commands.c
	* app/base/base.c
	* app/config/gimpcoreconfig.c
	* app/config/gimpdisplayconfig.c
	* app/config/gimprc.c
	* app/core/gimpimage-grid.c
	* app/core/gimpimage-new.c
	* app/core/gimpstrokedesc.c
	* app/dialogs/grid-dialog.c
	* app/dialogs/image-new-dialog.c
	* app/dialogs/stroke-dialog.c
	* app/display/gimpdisplayshell.c
	* app/text/gimptextlayer.c
	* app/text/gimptextundo.c
	* app/tools/gimptextoptions.c
	* libgimpconfig/gimpconfig-iface.c: changed accordingly.

2005-04-07  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c (plug_in_actions_add_branch)
	* app/core/gimpinterpreterdb.c (resolve_extension)
	* app/widgets/gimpcolorframe.c (gimp_color_frame_update): plugged
	memleaks.

2005-04-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagebox.c: plugged a small memleak.

	* libgimpwidgets/gimpcontroller.c: added a finalizer and free the
	allocated strings.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfig-utils.[ch]: added new function to reset
	a single property to its default value.

	* libgimpconfig/gimpconfig.def: updated.

	* app/config/gimpbaseconfig.[ch]: reverted last change.

	* app/base/base.c: use gimp_config_reset_property() instead.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: don't use -mwindows when linking gimp-console.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfig-path.[ch] (gimp_param_spec_config_path):
	declare default_value as const and allocate a copy.

	* app/config/gimpbaseconfig.[ch]: gives access to the default values
	for temp and swap path.

	* app/base/base.c (base_init): create the temp directory if it
	doesn't exist (bug #172682).
